# zpl-edge

./: .gitignore  README.md
zpl-engine/: pyproject.toml
zpl-engine/src/zpl_engine/: __init__.py  checker.py  helpers.py
zpl-engine/src/zpl_engine/zpl/: __init__.py  class_schema.py  zpl_engine.py  zpl_parser.py
zpl-proxy/: Dockerfile  docker-compose.yml  pyproject.toml  start.sh
zpl-proxy/config/: proxy.yaml
zpl-proxy/scripts/: install-watcher.sh  zpl-proxy-rules.py
zpl-proxy/src/zpl_proxy/: addon.py  config.py  hub.py  identity.py  jwt_verify.py  mcp.py  zpl_checker.py
zpl-proxy/src/zpl_proxy/storage/: aggregate.py  db.py  jsonl.py  schema.sql
zpl-proxy/tests/: test_admission.py  test_aggregate.py  test_aggregate_agent.py  test_analyze.py  test_config.py  test_hub.py  test_identity.py  test_jwt_verify.py  test_mcp.py  test_mcp_enforce.py  test_proxy_auth_jwt.py  test_retention.py  test_storage.py  test_vendored_checker.py
