[project]
name = "zpl-engine"
version = "0.1.0"
description = "Shared, framework-free ZPL (Zero Trust Policy Language) compile + evaluate engine"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "cel-python>=0.1.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
