[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zpl-proxy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0",
    "httpx>=0.27",
    "requests>=2.31",
    "requests-unixsocket2>=0.3",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "pyjwt[crypto]>=2.8",
    "zpl-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
zpl-proxy = "zpl_proxy.addon:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zpl_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
